Changed README file

--- a/README
+++ b/README
@@ -9,3 +9,8 @@ simplicity of programmer effort not simplicity or compactness or speed
 of the resulting code.
 
 Our Sunday morning rails class requested I put it online.
+
+Demo: http://complexit.heroku.com/
+
+Code: http://github.com/ChasManRors/ComplexIT_LLC
+
