--- a/README
+++ b/README
@@ -8,7 +8,7 @@ and then removed some of the unnecessary cruft.  I maximized
 simplicity of programmer effort not simplicity or compactness or speed
 of the resulting code.
 
-Our Sunday morning rails class requested I put it online.
+every Sunday morning rails class requested I put it online.
 
 Demo: http://complexit.heroku.com/
 
